# XtalOpt

./: .appveyor.yml  .codecov.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  INSTALL  LICENSE  README  README.md  codecov.yml  runtests.sh
python/: CMakeLists.txt  xtaloptpybind.cpp
src/: CMakeCache.txt  CMakeLists.txt  Makefile  bt.cpp  bt.h  cmake_install.cmake  extension.cpp  extension.h  genetic.cpp  genetic.h  optimizer.h  optimizers.cpp  optimizers.h  queuemanager.cpp  queuemanager.h  structure.cpp  structure.h  templates.cpp  templates.h  tracker.cpp  tracker.h  xtal.cpp  xtal.h  xtalopt.cpp  xtalopt.h
src/examplesearch/: CMakeLists.txt  examplesearch.cpp  examplesearch.h  extension.cpp  extension.h
src/examplesearch/optimizers/: gamess.cpp  gamess.h  mopac.cpp  mopac.h
src/examplesearch/ui/: dialog.cpp  dialog.h  dialog.ui  tab_edit.cpp  tab_edit.h  tab_init.cpp  tab_init.h  tab_init.ui  tab_log.cpp  tab_log.h  tab_plot.cpp  tab_plot.h  tab_progress.cpp  tab_progress.h  tab_progress.ui
src/gapc/: CMakeLists.txt  extension.cpp  extension.h  gapc.cpp  gapc.h  genetic.cpp  genetic.h
src/gapc/optimizers/: adf.cpp  adf.h  gulp.cpp  gulp.h  openbabel.cpp  openbabel.h
src/gapc/structures/: cluster.cpp  cluster.h  protectedcluster.cpp  protectedcluster.h
src/gapc/ui/: dialog.cpp  dialog.h  dialog.ui  tab_edit.cpp  tab_edit.h  tab_edit.ui  tab_init.cpp  tab_init.h  tab_init.ui  tab_log.cpp  tab_log.h  tab_opt.cpp  tab_opt.h  tab_opt.ui  tab_plot.cpp  tab_plot.h  tab_plot.ui  tab_progress.cpp  tab_progress.h  tab_progress.ui  tab_sys.cpp  tab_sys.h  tab_sys.ui
src/generic/: CMakeLists.txt  macros.h  optbase.cpp  optbase.h  optimizer.cpp  optimizer.h  queuemanager.cpp  queuemanager.h  structure.cpp  structure.h  templates.cpp  templates.h  tracker.cpp  xtal.cpp  xtal.h
src/globalsearch/: CMakeLists.txt  COPYING  COPYING-BSD  bt.cpp  bt.h  chull.h  constants.h  eleminfo.cpp  eleminfo.h  eleminfodatabase.h  exceptionhandler.cpp  fileutils.cpp  fileutils.h  fitness.h  macros.cpp  macros.h  matrix.h  obeigenconv.h  optbase.cpp  optbase.h  optimizer.cpp  optimizer.h  optimizerdialog.cpp  optimizerdialog.h  queueinterface.cpp  queueinterface.h  queuemanager.cpp  queuemanager.h  random.cpp  random.h  searchbase.cpp  searchbase.h  slottedwaitcondition.cpp  slottedwaitcondition.h  sshconnection.cpp  sshconnection.h  sshconnection_cli.cpp  sshconnection_cli.h  sshconnection_libssh.cpp  sshconnection_libssh.h  (+12 more)
src/globalsearch/formats/: castepformat.cpp  castepformat.h  cmlformat.cpp  cmlformat.h  formats.cpp  formats.h  genericformat.cpp  genericformat.h  gulpformat.cpp  gulpformat.h  mtpformat.cpp  mtpformat.h  obconvert.cpp  obconvert.h  poscarformat.cpp  poscarformat.h  pwscfformat.cpp  pwscfformat.h  siestaformat.cpp  siestaformat.h  vaspformat.cpp  vaspformat.h  xyzformat.cpp  xyzformat.h  zmatrixformat.cpp  zmatrixformat.h
src/globalsearch/http/: aflowml.cpp  aflowml.h  httprequestmanager.cpp  httprequestmanager.h
src/libssh/: CMakeLists.txt  ConfigureChecks.cmake  DefineOptions.cmake  agent.c  auth.c  auth1.c  base64.c  buffer.c  callbacks.c  channels.c  channels1.c  client.c  config.c  config.h.cmake  connect.c  crypt.c  dh.c  error.c  gzip.c  init.c  kex.c  keyfiles.c  keys.c  legacy.c  log.c  messages.c  misc.c  options.c  packet.c  packet1.c  pcap.c  pki.c  poll.c  scp.c  server.c  session.c  sftp.c  sftpserver.c  socket.c  string.c  (+1 more)
src/optimizers/: gulp.cpp  gulp.h  pwscf.cpp  pwscf.h  vasp.cpp  vasp.h
src/randSpg/: CMakeLists.txt
src/randomdock/: CMakeLists.txt  extension.cpp  extension.h  randomdock.cpp  randomdock.h  templates.cpp  templates.h
src/spgGen/: CMakeLists.txt
src/spglib/: CMakeLists.txt  bravais.c  bravais.h  bravais_art.c  bravais_art.h  bravais_virtual.c  cell.c  cell.h  debug.c  debug.h  hall_symbol.c  kgrid.c  kpoint.c  kpoint.h  lattice.c  mathfunc.c  mathfunc.h  niggli.c  pointgroup.c  pointgroup.h  primitive.c  primitive.h  refinement.c  refinement.h  site_symmetry.c  site_symmetry.h  sitesym_database.c  sitesym_database.h  spacegroup.c  spacegroup.h  spacegroup_data.c  spacegroup_data.h  spacegroup_database.c  spacegroup_database.h  spacegroup_type.c  spg_database.c  spg_database.h  spglib.c  spglib.h  spglib_f.c  (+7 more)
src/src/: Makefile  cmake_install.cmake
src/testing/: xtalopttest.cpp  xtalopttest.h
src/ui/: dialog.cpp  dialog.h  dialog.ui  tab_edit.cpp  tab_edit.h  tab_edit.ui  tab_init.cpp  tab_init.h  tab_log.cpp  tab_log.h  tab_opt.cpp  tab_opt.h  tab_opt.ui  tab_plot.cpp  tab_plot.h  tab_plot.ui  tab_progress.cpp  tab_progress.h  tab_progress.ui  tab_sys.cpp  tab_sys.h  tab_sys.ui
src/xtalcomp/: CMakeLists.txt  README  stablecomparison.h  test.cpp  xctransform.cpp  xctransform.h  xcvector.h  xtalcomp.cpp  xtalcomp.h
src/xtalopt/: CMakeLists.txt  cliOptions.cpp  cliOptions.h  debug.cpp  debug.h  extension.cpp  extension.h  genetic.cpp  genetic.h  holefinder.cpp  holefinder.h  main.cpp  molecularmain.cpp  molecularxtalmutator.cpp  molecularxtalmutator.h  molecularxtaloptimizer.cpp  molecularxtaloptimizer.h  molecularxtalsupercellgenerator.cpp  molecularxtalsupercellgenerator.h  mxtaloptgenetic.cpp  mxtaloptgenetic.h  submoleculeranker.cpp  submoleculeranker.h  xtalopt.cpp  xtalopt.h  xtalopt.qrc  xtalopt.rc
tests/: CMakeLists.txt  checkForUndefinedSymbols.sh  checkStateFileGenerator.cpp  checkTemplates.cpp  conformergeneratortest.cpp  formatstest.cpp  genetictest.cpp  genxrdtest.cpp  holefindertest.cpp  loadlevelertest.cpp  molecularxtalmutatortest.cpp  molecularxtaloptimizertest.cpp  molecularxtalsupercellgeneratortest.cpp  molecularxtaltest.cpp  moltransformationstest.cpp  mxtaloptgenetictest.cpp  optbasetest.cpp  randdoubletest.cpp  randspgtest.cpp  searchbasetest.cpp  spglibtest.cpp  sshconnection_clitest.cpp  sshconnection_libsshtest.cpp  sshconnectiontest.cpp  sshmanager_clitest.cpp  sshmanager_libsshtest.cpp  sshmanagertest.cpp  structuretest.cpp  submoleculerankertest.cpp  submoleculesourcetest.cpp  submoleculetest.cpp  xtaloptunittest.cpp  xtaltest.cpp
(+855 files in other folders)
